# gha-watch

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: actionIcon.test.ts  actionIcon.ts  collapsedGroups.test.ts  collapsedGroups.ts  dragGlyph.test.ts  dragGlyph.ts  overflowMenu.test.ts  overflowMenu.ts  popupDismissal.test.ts  popupDismissal.ts  popupLayout.test.ts  popupLayout.ts  popupScroll.test.ts  popupScroll.ts  popupSize.test.ts  popupSize.ts  prStateIcon.test.ts  prStateIcon.ts  repoHeaderActions.test.ts  repoHeaderActions.ts  repoReorderInteraction.test.ts  repoReorderInteraction.ts  statusIcon.test.ts  statusIcon.ts  trayState.test.ts  trayState.ts  viewModel.test.ts  viewModel.ts  watchActionConfirmation.test.ts  watchActionConfirmation.ts  watchController.test.ts  watchController.ts  watchHoverSeen.test.ts  watchHoverSeen.ts  watchNotification.test.ts  watchNotification.ts  watchSeenAction.test.ts  watchSeenAction.ts  watchSubjectIcon.test.ts  watchSubjectIcon.ts  (+2 more)
src/domain/: favorites.test.ts  favorites.ts  githubUrl.test.ts  githubUrl.ts  repoOrder.test.ts  repoOrder.ts  settings.test.ts  settings.ts  status.test.ts  status.ts  watches.test.ts  watches.ts
src/platform/: autostart.test.ts  autostart.ts  autostartConfig.test.ts  gh.test.ts  gh.ts  linuxPackagingConfig.test.ts  macosNotificationConfig.test.ts  (+6 more)
(+1 files in other folders)
