[package]
name = "gha-watch"
version = "0.1.0"
description = "A minimal GitHub Actions tray watcher"
authors = ["jpnurmi"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.11.2", features = ["image-png", "macos-private-api", "tray-icon"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.4"
tauri-plugin-shell = "2.3.5"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.12"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"
